add reference and header

--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ body {
    padding:5px;
 }
 
+h1.title {
+  text-align: center;
+}
+h4.author { /* Header 4 - and the author and data headers use this too  */
+  text-align: center;
+}
+h4.date { /* Header 4 - and the author and data headers use this too  */
+  text-align: center;
+}
